--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 		position: relative;
 		height: 100%;
 		width: 50%;
-		background: url(images/bg-pattern-desktop.svg) -70% center no-repeat fixed,
+		background: url(images/bg-pattern-desktop.svg) -70% -100px no-repeat fixed,
 			url(images/illustration-woman-online-desktop.svg) -5vw center no-repeat;
 	}
 	.illustration > img {
